# axum-Yew

./: .gitignore  Cargo.toml  README.md
axum_backend/: Cargo.toml
axum_backend/src/: lib.rs  main.rs
axum_backend/src/routes/: mod.rs  return_json_data.rs
slide/: axum-slide.md  procedures.md  yew-slide.md
yew_frontend/: Cargo.toml  index.html
yew_frontend/src/: fetch_json.rs  lib.rs  main.rs
